--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zfr/zfr-lightspeed-retail",
+    "name": "davd/zfr-lightspeed-retail",
     "type": "library",
     "license": "MIT",
     "description" : "PHP library for interacting with the Lightspeed Retail REST API",
@@ -9,7 +9,7 @@
         "pos",
         "api"
     ],
-    "homepage": "https://github.com/zf-fr/zfr-lightspeed-retail",
+    "homepage": "https://github.com/davd/zfr-lightspeed-retail",
     "authors": [
         {
             "name": "Daniel Gimenes",
@@ -19,6 +19,10 @@
             "name": "Michaël Gallego",
             "email": "mic.gallego@gmail.com",
             "homepage": "http://www.michaelgallego.fr"
+        },
+        {
+            "name": "David Teston",
+            "email": "davder@gmail.com"
         }
     ],
     "require": {
